crates/model/tests/compile_fail/fsm_transition_bad_source.stderr
error: transition source `ghost` not found in states list
  --> tests/compile_fail/fsm_transition_bad_source.rs:14:24
   |
14 |         transitions: { ghost => idle },
   |                        ^^^^^
